# AoC

./: .gitignore  Makefile  pyproject.toml
2017/: AoCHelper.py  abcTypes.py  dec1.py  dec2.py  dec3.py  dec4-2.py  dec4.py
2020/: AoCHelper.py  abcTypes.py  day19.txt  dec1.py  dec10.py  dec11.py  dec12.py  dec13.py  dec14.py  dec15.py  dec16.py  dec17.py  dec18.py  dec19-2.py  dec19.py  dec2.py  dec20.py  dec21.py  dec22.py  dec23-2.py  dec23.py  dec24-2.py  dec24-2019.py  dec24.py  dec25.py  dec3.py  dec4-2019.py  dec4.py  dec5-2019.py  dec5.py  dec6.py  dec7.py  dec8-2.py  dec8-2019.py  dec8.py  dec9.py  hexlib.py
2021/: day21.txt  dec1.py  dec10.py  dec11.py  dec12.py  dec13.py  dec14.py  dec15.py  dec16.py  dec17.py  dec18.py  dec2.py  dec20.py  dec21.py  dec22.py  dec3.py  dec4-2.py  dec4.py  dec5.py  dec6.py  dec7.py  dec8.py  dec9.py
2022/: dec1.py  dec10.py  dec11.py  dec12.py  dec13.py  dec14.py  dec15.py  dec16.py  dec18.py  dec2.py  dec3.py  dec4.py  dec5.py  dec6.py  dec7.py  dec8.py  dec9.py
2022/data/: day5-puzzle.txt
2023/: dec1.py  dec10.py  dec11.py  dec12.py  dec13.py  dec14.py  dec15.py  dec16.py  dec17.py  dec18.py  dec19.py  dec2.py  dec20.py  dec21.py  dec23.py  dec3.py  dec4.py  dec5.py  dec6.py  dec7.py  dec8.py  dec9.py
2024/: dec1.py  dec2.py  dec3.py  dec4.py  dec5.py
utils/: AoCHelper.py  GlobalVariables.py  abcTypes.py  aoc_helper.py  aoc_types.py  graphics_helper.py  network.py
