[tool.poetry]
name = "aoc"
version = "0.0.1"
description = "Hydra is an API for analytical calculations on vessel performance data from the StarConnect project."
authors = ["StarConnect Analytics <starconnect-analytics@maersk.onmicrosoft.com>"]

[tool.poetry.dependencies]
python = ">=3.9.12,<3.12"
numpy = "*"
pandas = "*"
pydantic = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
