[tool.poetry]
name = "aoc"
version = "0.0.1"
description = "Advent of Code"
authors = ["Michael <staal@8i.dk>"]

[tool.poetry.dependencies]
python = ">=3.9.12,<3.12"
numpy = "*"
networkx = "*"
pandas = "*"
pydantic = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
